// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Avatar.Group\` Component in group 1`] = `
<DocumentFragment>
  <div
    class="musae-avatar__group group__styles.group"
  >
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="AA"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="BB"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="CC"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`\`Avatar.Group\` Component in group, but is more than limit 1`] = `
<DocumentFragment>
  <div
    class="musae-avatar__group group__styles.group"
  >
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="AA"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="BB"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="CC"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="DD"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
    <span
      class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular avatar__styles.overlapping"
      style="--backgroundColor: #EADDFF; --color: #6750A4; --borderColor: #FFF;"
    >
      <img
        alt="+2"
        class="avatar__styles.image"
        draggable="false"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`\`Avatar\` Component mock image is loaded 1`] = `
<DocumentFragment>
  <span
    class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular"
    style="--backgroundColor: #EADDFF; --color: #6750A4;"
  >
    <img
      alt="RJ"
      class="avatar__styles.image"
      draggable="false"
      src="https://aiszlab.com"
    />
  </span>
</DocumentFragment>
`;

exports[`\`Avatar\` Component with src, load error 1`] = `
<DocumentFragment>
  <span
    class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular"
    style="--backgroundColor: #EADDFF; --color: #6750A4;"
  >
    RJ
  </span>
</DocumentFragment>
`;

exports[`\`Avatar\` Component without src 1`] = `
<DocumentFragment>
  <span
    class="musae-avatar theme__label.medium avatar__styles.avatar avatar__styles.medium avatar__styles.circular"
    style="--backgroundColor: #EADDFF; --color: #6750A4;"
  />
</DocumentFragment>
`;
